parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    LOGICAL_AND
    LOGICAL_OR
    MINUS_ASSIGN
    MODULO_ASSIGN
    NOT_EQUAL
    PLUS_ASSIGN
    TIMES_ASSIGN
    UNVISITED
    VISITED

Grammar

Rule 0     S' -> program
Rule 1     program -> function_definition_list struct_definition_list
Rule 2     function_definition_list -> function_definition function_definition_list
Rule 3     function_definition_list -> empty
Rule 4     struct_definition_list -> struct_definition struct_definition_list
Rule 5     struct_definition_list -> empty
Rule 6     function_definition -> type_specification ID LPAREN formal_parameters RPAREN block
Rule 7     function_definition -> type_specification DFS LPAREN formal_parameters RPAREN block
Rule 8     function_definition -> type_specification BFS LPAREN formal_parameters RPAREN block
Rule 9     struct_definition -> STRUCT ID LBRACE type_specification RBRACE SEMICOLON
Rule 10    formal_parameters -> formal_parameter COMMA formal_parameters
Rule 11    formal_parameters -> formal_parameter
Rule 12    formal_parameters -> empty
Rule 13    formal_parameter -> type_specification ID
Rule 14    formal_parameter -> type_specification ID LBRACKET INT_CONST RBRACKET
Rule 15    formal_parameter -> type_specification ID LBRACKET RBRACKET
Rule 16    type_specification -> INT
Rule 17    type_specification -> FLOAT
Rule 18    type_specification -> CHAR
Rule 19    type_specification -> BOOL
Rule 20    type_specification -> GRAPH
Rule 21    type_specification -> EDGE
Rule 22    type_specification -> NODE
Rule 23    type_specification -> VOID
Rule 24    block -> LBRACE compound_statement RBRACE
Rule 25    compound_statement -> statement compound_statement
Rule 26    compound_statement -> empty
Rule 27    compound_statement -> variable_declaration compound_statement
Rule 28    compound_statement -> special_function compound_statement
Rule 29    variable_declaration -> type_specification ID SEMICOLON
Rule 30    variable_declaration -> type_specification ID ASSIGN expression_statement SEMICOLON
Rule 31    variable_declaration -> type_specification ID COMMA variable_declaration SEMICOLON
Rule 32    variable_declaration -> type_specification ID LBRACKET INT_CONST RBRACKET SEMICOLON
Rule 33    statement -> expression_statement
Rule 34    statement -> return_statement
Rule 35    statement -> if_statement
Rule 36    statement -> for_statement
Rule 37    statement -> while_statement
Rule 38    special_function -> add_node
Rule 39    special_function -> add_edge
Rule 40    special_function -> remove_node
Rule 41    special_function -> remove_edge
Rule 42    special_function -> change_node_rgb
Rule 43    special_function -> change_node_x
Rule 44    special_function -> change_node_y
Rule 45    special_function -> change_edge_rgb
Rule 46    special_function -> show
Rule 47    special_function -> dfs
Rule 48    add_node -> ADD_NODE LPAREN expression COMMA expression COMMA LBRACE expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RBRACE RPAREN SEMICOLON
Rule 49    add_edge -> ADD_EDGE LPAREN expression COMMA LBRACE expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RBRACE RPAREN SEMICOLON
Rule 50    remove_node -> REMOVE_NODE LPAREN expression COMMA expression RPAREN SEMICOLON
Rule 51    remove_edge -> REMOVE_EDGE LPAREN expression COMMA expression RPAREN SEMICOLON
Rule 52    change_node_rgb -> CHANGE_NODE_RGB LPAREN expression COMMA expression COMMA LBRACE expression COMMA expression COMMA expression RBRACE RPAREN SEMICOLON
Rule 53    change_node_x -> CHANGE_NODE_X LPAREN expression COMMA expression COMMA expression RPAREN SEMICOLON
Rule 54    change_node_y -> CHANGE_NODE_Y LPAREN expression COMMA expression COMMA expression RPAREN SEMICOLON
Rule 55    change_edge_rgb -> CHANGE_EDGE_RGB LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN SEMICOLON
Rule 56    show -> SHOW LPAREN expression RPAREN SEMICOLON
Rule 57    dfs -> DFS LPAREN ID COMMA node_expression COMMA ID RPAREN SEMICOLON
Rule 58    expression_statement -> expression SEMICOLON
Rule 59    return_statement -> RETURN expression_statement
Rule 60    if_statement -> IF LPAREN expression RPAREN LBRACE compound_statement RBRACE
Rule 61    if_statement -> IF LPAREN expression RPAREN block ELSE LBRACE compound_statement RBRACE
Rule 62    if_statement -> IF LPAREN expression RPAREN block ELSE if_statement
Rule 63    for_statement -> FOR LPAREN INT ID ASSIGN INT_CONST SEMICOLON expression SEMICOLON post_increment_expression RPAREN block
Rule 64    while_statement -> WHILE LPAREN expression RPAREN block
Rule 65    empty -> <empty>
Rule 66    expression -> assign_expression
Rule 67    expression -> node_expression
Rule 68    assign_expression -> equality_expression ASSIGN assign_expression
Rule 69    assign_expression -> equality_expression
Rule 70    assign_expression -> MINUS MINUS primary_expression
Rule 71    assign_expression -> PLUS PLUS primary_expression
Rule 72    equality_expression -> relational_expression
Rule 73    equality_expression -> relational_expression EQUAL relational_expression
Rule 74    equality_expression -> relational_expression LOGICAL_NOT ASSIGN relational_expression
Rule 75    unary_expression -> primary_expression
Rule 76    unary_expression -> PLUS primary_expression
Rule 77    unary_expression -> MINUS primary_expression
Rule 78    unary_expression -> LOGICAL_NOT primary_expression
Rule 79    relational_expression -> add_sub_expression compare_expression
Rule 80    compare_expression -> empty
Rule 81    compare_expression -> LESS_THAN add_sub_expression compare_expression
Rule 82    compare_expression -> LESS_THAN_EQUAL ASSIGN add_sub_expression compare_expression
Rule 83    compare_expression -> GREATER_THAN add_sub_expression compare_expression
Rule 84    compare_expression -> GREATER_THAN_EQUAL ASSIGN add_sub_expression compare_expression
Rule 85    add_sub_expression -> mul_div_mod_expression add_sub_tail
Rule 86    add_sub_tail -> PLUS mul_div_mod_expression add_sub_tail
Rule 87    add_sub_tail -> MINUS mul_div_mod_expression add_sub_tail
Rule 88    add_sub_tail -> empty
Rule 89    mul_div_mod_expression -> unary_expression mul_div_mod_tail
Rule 90    mul_div_mod_tail -> TIMES unary_expression mul_div_mod_tail
Rule 91    mul_div_mod_tail -> DIVIDE unary_expression mul_div_mod_tail
Rule 92    mul_div_mod_tail -> MODULO unary_expression mul_div_mod_tail
Rule 93    mul_div_mod_tail -> empty
Rule 94    array_assignment_expression -> array_access ASSIGN expression
Rule 95    post_increment_expression -> PLUS PLUS primary_expression
Rule 96    post_increment_expression -> MINUS MINUS primary_expression
Rule 97    node_expression -> ID
Rule 98    node_expression -> ID DOT ADJ LBRACKET ID RBRACKET LBRACKET ID RBRACKET
Rule 99    node_expression -> INT_CONST
Rule 100   array_access -> ID LBRACKET expression RBRACKET
Rule 101   primary_expression -> ID
Rule 102   primary_expression -> ID args_expression
Rule 103   primary_expression -> TRUE
Rule 104   primary_expression -> FALSE
Rule 105   primary_expression -> num_expression
Rule 106   primary_expression -> ID LBRACKET expression RBRACKET
Rule 107   primary_expression -> NODE
Rule 108   primary_expression -> EDGE
Rule 109   primary_expression -> GRAPH
Rule 110   primary_expression -> LPAREN expression RPAREN
Rule 111   args_expression -> LPAREN RPAREN
Rule 112   args_expression -> LPAREN assign_expression_list RPAREN
Rule 113   assign_expression_list -> empty
Rule 114   assign_expression_list -> assign_expression
Rule 115   assign_expression_list -> assign_expression COMMA assign_expression_list
Rule 116   num_expression -> INT_CONST
Rule 117   num_expression -> FLOAT_CONST
Rule 118   num_expression -> function_num_expression
Rule 119   function_num_expression -> LENGTH LPAREN ID DOT ADJ LBRACKET ID RBRACKET RPAREN

Terminals, with rules where they appear

ADD_EDGE             : 49
ADD_NODE             : 48
ADJ                  : 98 119
ARRAY                : 
ASSIGN               : 30 63 68 74 82 84 94
BFS                  : 8
BOOL                 : 19
CHANGE_EDGE_RGB      : 55
CHANGE_NODE_RGB      : 52
CHANGE_NODE_X        : 53
CHANGE_NODE_Y        : 54
CHAR                 : 18
COMMA                : 10 31 48 48 48 48 48 48 48 49 49 49 49 49 49 50 51 52 52 52 52 53 53 54 54 55 55 55 55 55 57 57 115
DFS                  : 7 57
DIVIDE               : 91
DOT                  : 98 119
EDGE                 : 21 108
ELSE                 : 61 62
EQUAL                : 73
FALSE                : 104
FLOAT                : 17
FLOAT_CONST          : 117
FOR                  : 63
GRAPH                : 20 109
GREATER_THAN         : 83
GREATER_THAN_EQUAL   : 84
ID                   : 6 9 13 14 15 29 30 31 32 57 57 63 97 98 98 98 100 101 102 106 119 119
IF                   : 60 61 62
INT                  : 16 63
INT_CONST            : 14 32 63 99 116
LBRACE               : 9 24 48 49 52 60 61
LBRACKET             : 14 15 32 98 98 100 106 119
LENGTH               : 119
LESS_THAN            : 81
LESS_THAN_EQUAL      : 82
LOGICAL_AND          : 
LOGICAL_NOT          : 74 78
LOGICAL_OR           : 
LPAREN               : 6 7 8 48 49 50 51 52 53 54 55 56 57 60 61 62 63 64 110 111 112 119
MINUS                : 70 70 77 87 96 96
MINUS_ASSIGN         : 
MODULO               : 92
MODULO_ASSIGN        : 
NODE                 : 22 107
NOT_EQUAL            : 
PLUS                 : 71 71 76 86 95 95
PLUS_ASSIGN          : 
RBRACE               : 9 24 48 49 52 60 61
RBRACKET             : 14 15 32 98 98 100 106 119
REMOVE_EDGE          : 51
REMOVE_NODE          : 50
RETURN               : 59
RPAREN               : 6 7 8 48 49 50 51 52 53 54 55 56 57 60 61 62 63 64 110 111 112 119
SEMICOLON            : 9 29 30 31 32 48 49 50 51 52 53 54 55 56 57 58 63 63
SHOW                 : 56
STRUCT               : 9
TIMES                : 90
TIMES_ASSIGN         : 
TRUE                 : 103
UNVISITED            : 
VISITED              : 
VOID                 : 23
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

add_edge             : 39
add_node             : 38
add_sub_expression   : 79 81 82 83 84
add_sub_tail         : 85 86 87
args_expression      : 102
array_access         : 94
array_assignment_expression : 
assign_expression    : 66 68 114 115
assign_expression_list : 112 115
block                : 6 7 8 61 62 63 64
change_edge_rgb      : 45
change_node_rgb      : 42
change_node_x        : 43
change_node_y        : 44
compare_expression   : 79 81 82 83 84
compound_statement   : 24 25 27 28 60 61
dfs                  : 47
empty                : 3 5 12 26 80 88 93 113
equality_expression  : 68 69
expression           : 48 48 48 48 48 48 48 48 49 49 49 49 49 49 49 50 50 51 51 52 52 52 52 52 53 53 53 54 54 54 55 55 55 55 55 55 56 58 60 61 62 63 64 94 100 106 110
expression_statement : 30 33 59
for_statement        : 36
formal_parameter     : 10 11
formal_parameters    : 6 7 8 10
function_definition  : 2
function_definition_list : 1 2
function_num_expression : 118
if_statement         : 35 62
mul_div_mod_expression : 85 86 87
mul_div_mod_tail     : 89 90 91 92
node_expression      : 57 67
num_expression       : 105
post_increment_expression : 63
primary_expression   : 70 71 75 76 77 78 95 96
program              : 0
relational_expression : 72 73 73 74 74
remove_edge          : 41
remove_node          : 40
return_statement     : 34
show                 : 46
special_function     : 28
statement            : 25
struct_definition    : 4
struct_definition_list : 1 4
type_specification   : 6 7 8 9 13 14 15 29 30 31 32
unary_expression     : 89 90 91 92
variable_declaration : 27 31
while_statement      : 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_definition_list struct_definition_list
    (2) function_definition_list -> . function_definition function_definition_list
    (3) function_definition_list -> . empty
    (6) function_definition -> . type_specification ID LPAREN formal_parameters RPAREN block
    (7) function_definition -> . type_specification DFS LPAREN formal_parameters RPAREN block
    (8) function_definition -> . type_specification BFS LPAREN formal_parameters RPAREN block
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    STRUCT          reduce using rule 65 (empty -> .)
    $end            reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    program                        shift and go to state 1
    function_definition_list       shift and go to state 2
    function_definition            shift and go to state 3
    empty                          shift and go to state 4
    type_specification             shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> function_definition_list . struct_definition_list
    (4) struct_definition_list -> . struct_definition struct_definition_list
    (5) struct_definition_list -> . empty
    (9) struct_definition -> . STRUCT ID LBRACE type_specification RBRACE SEMICOLON
    (65) empty -> .

    STRUCT          shift and go to state 17
    $end            reduce using rule 65 (empty -> .)

    struct_definition_list         shift and go to state 14
    struct_definition              shift and go to state 15
    empty                          shift and go to state 16

state 3

    (2) function_definition_list -> function_definition . function_definition_list
    (2) function_definition_list -> . function_definition function_definition_list
    (3) function_definition_list -> . empty
    (6) function_definition -> . type_specification ID LPAREN formal_parameters RPAREN block
    (7) function_definition -> . type_specification DFS LPAREN formal_parameters RPAREN block
    (8) function_definition -> . type_specification BFS LPAREN formal_parameters RPAREN block
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    STRUCT          reduce using rule 65 (empty -> .)
    $end            reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    function_definition            shift and go to state 3
    function_definition_list       shift and go to state 18
    empty                          shift and go to state 4
    type_specification             shift and go to state 5

state 4

    (3) function_definition_list -> empty .

    STRUCT          reduce using rule 3 (function_definition_list -> empty .)
    $end            reduce using rule 3 (function_definition_list -> empty .)


state 5

    (6) function_definition -> type_specification . ID LPAREN formal_parameters RPAREN block
    (7) function_definition -> type_specification . DFS LPAREN formal_parameters RPAREN block
    (8) function_definition -> type_specification . BFS LPAREN formal_parameters RPAREN block

    ID              shift and go to state 19
    DFS             shift and go to state 20
    BFS             shift and go to state 21


state 6

    (16) type_specification -> INT .

    ID              reduce using rule 16 (type_specification -> INT .)
    DFS             reduce using rule 16 (type_specification -> INT .)
    BFS             reduce using rule 16 (type_specification -> INT .)
    RBRACE          reduce using rule 16 (type_specification -> INT .)


state 7

    (17) type_specification -> FLOAT .

    ID              reduce using rule 17 (type_specification -> FLOAT .)
    DFS             reduce using rule 17 (type_specification -> FLOAT .)
    BFS             reduce using rule 17 (type_specification -> FLOAT .)
    RBRACE          reduce using rule 17 (type_specification -> FLOAT .)


state 8

    (18) type_specification -> CHAR .

    ID              reduce using rule 18 (type_specification -> CHAR .)
    DFS             reduce using rule 18 (type_specification -> CHAR .)
    BFS             reduce using rule 18 (type_specification -> CHAR .)
    RBRACE          reduce using rule 18 (type_specification -> CHAR .)


state 9

    (19) type_specification -> BOOL .

    ID              reduce using rule 19 (type_specification -> BOOL .)
    DFS             reduce using rule 19 (type_specification -> BOOL .)
    BFS             reduce using rule 19 (type_specification -> BOOL .)
    RBRACE          reduce using rule 19 (type_specification -> BOOL .)


state 10

    (20) type_specification -> GRAPH .

    ID              reduce using rule 20 (type_specification -> GRAPH .)
    DFS             reduce using rule 20 (type_specification -> GRAPH .)
    BFS             reduce using rule 20 (type_specification -> GRAPH .)
    RBRACE          reduce using rule 20 (type_specification -> GRAPH .)


state 11

    (21) type_specification -> EDGE .

    ID              reduce using rule 21 (type_specification -> EDGE .)
    DFS             reduce using rule 21 (type_specification -> EDGE .)
    BFS             reduce using rule 21 (type_specification -> EDGE .)
    RBRACE          reduce using rule 21 (type_specification -> EDGE .)


state 12

    (22) type_specification -> NODE .

    ID              reduce using rule 22 (type_specification -> NODE .)
    DFS             reduce using rule 22 (type_specification -> NODE .)
    BFS             reduce using rule 22 (type_specification -> NODE .)
    RBRACE          reduce using rule 22 (type_specification -> NODE .)


state 13

    (23) type_specification -> VOID .

    ID              reduce using rule 23 (type_specification -> VOID .)
    DFS             reduce using rule 23 (type_specification -> VOID .)
    BFS             reduce using rule 23 (type_specification -> VOID .)
    RBRACE          reduce using rule 23 (type_specification -> VOID .)


state 14

    (1) program -> function_definition_list struct_definition_list .

    $end            reduce using rule 1 (program -> function_definition_list struct_definition_list .)


state 15

    (4) struct_definition_list -> struct_definition . struct_definition_list
    (4) struct_definition_list -> . struct_definition struct_definition_list
    (5) struct_definition_list -> . empty
    (9) struct_definition -> . STRUCT ID LBRACE type_specification RBRACE SEMICOLON
    (65) empty -> .

    STRUCT          shift and go to state 17
    $end            reduce using rule 65 (empty -> .)

    struct_definition              shift and go to state 15
    struct_definition_list         shift and go to state 22
    empty                          shift and go to state 16

state 16

    (5) struct_definition_list -> empty .

    $end            reduce using rule 5 (struct_definition_list -> empty .)


state 17

    (9) struct_definition -> STRUCT . ID LBRACE type_specification RBRACE SEMICOLON

    ID              shift and go to state 23


state 18

    (2) function_definition_list -> function_definition function_definition_list .

    STRUCT          reduce using rule 2 (function_definition_list -> function_definition function_definition_list .)
    $end            reduce using rule 2 (function_definition_list -> function_definition function_definition_list .)


state 19

    (6) function_definition -> type_specification ID . LPAREN formal_parameters RPAREN block

    LPAREN          shift and go to state 24


state 20

    (7) function_definition -> type_specification DFS . LPAREN formal_parameters RPAREN block

    LPAREN          shift and go to state 25


state 21

    (8) function_definition -> type_specification BFS . LPAREN formal_parameters RPAREN block

    LPAREN          shift and go to state 26


state 22

    (4) struct_definition_list -> struct_definition struct_definition_list .

    $end            reduce using rule 4 (struct_definition_list -> struct_definition struct_definition_list .)


state 23

    (9) struct_definition -> STRUCT ID . LBRACE type_specification RBRACE SEMICOLON

    LBRACE          shift and go to state 27


state 24

    (6) function_definition -> type_specification ID LPAREN . formal_parameters RPAREN block
    (10) formal_parameters -> . formal_parameter COMMA formal_parameters
    (11) formal_parameters -> . formal_parameter
    (12) formal_parameters -> . empty
    (13) formal_parameter -> . type_specification ID
    (14) formal_parameter -> . type_specification ID LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> . type_specification ID LBRACKET RBRACKET
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    RPAREN          reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    type_specification             shift and go to state 28
    formal_parameters              shift and go to state 29
    formal_parameter               shift and go to state 30
    empty                          shift and go to state 31

state 25

    (7) function_definition -> type_specification DFS LPAREN . formal_parameters RPAREN block
    (10) formal_parameters -> . formal_parameter COMMA formal_parameters
    (11) formal_parameters -> . formal_parameter
    (12) formal_parameters -> . empty
    (13) formal_parameter -> . type_specification ID
    (14) formal_parameter -> . type_specification ID LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> . type_specification ID LBRACKET RBRACKET
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    RPAREN          reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    type_specification             shift and go to state 28
    formal_parameters              shift and go to state 32
    formal_parameter               shift and go to state 30
    empty                          shift and go to state 31

state 26

    (8) function_definition -> type_specification BFS LPAREN . formal_parameters RPAREN block
    (10) formal_parameters -> . formal_parameter COMMA formal_parameters
    (11) formal_parameters -> . formal_parameter
    (12) formal_parameters -> . empty
    (13) formal_parameter -> . type_specification ID
    (14) formal_parameter -> . type_specification ID LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> . type_specification ID LBRACKET RBRACKET
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    RPAREN          reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    type_specification             shift and go to state 28
    formal_parameters              shift and go to state 33
    formal_parameter               shift and go to state 30
    empty                          shift and go to state 31

state 27

    (9) struct_definition -> STRUCT ID LBRACE . type_specification RBRACE SEMICOLON
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    type_specification             shift and go to state 34

state 28

    (13) formal_parameter -> type_specification . ID
    (14) formal_parameter -> type_specification . ID LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> type_specification . ID LBRACKET RBRACKET

    ID              shift and go to state 35


state 29

    (6) function_definition -> type_specification ID LPAREN formal_parameters . RPAREN block

    RPAREN          shift and go to state 36


state 30

    (10) formal_parameters -> formal_parameter . COMMA formal_parameters
    (11) formal_parameters -> formal_parameter .

    COMMA           shift and go to state 37
    RPAREN          reduce using rule 11 (formal_parameters -> formal_parameter .)


state 31

    (12) formal_parameters -> empty .

    RPAREN          reduce using rule 12 (formal_parameters -> empty .)


state 32

    (7) function_definition -> type_specification DFS LPAREN formal_parameters . RPAREN block

    RPAREN          shift and go to state 38


state 33

    (8) function_definition -> type_specification BFS LPAREN formal_parameters . RPAREN block

    RPAREN          shift and go to state 39


state 34

    (9) struct_definition -> STRUCT ID LBRACE type_specification . RBRACE SEMICOLON

    RBRACE          shift and go to state 40


state 35

    (13) formal_parameter -> type_specification ID .
    (14) formal_parameter -> type_specification ID . LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> type_specification ID . LBRACKET RBRACKET

    COMMA           reduce using rule 13 (formal_parameter -> type_specification ID .)
    RPAREN          reduce using rule 13 (formal_parameter -> type_specification ID .)
    LBRACKET        shift and go to state 41


state 36

    (6) function_definition -> type_specification ID LPAREN formal_parameters RPAREN . block
    (24) block -> . LBRACE compound_statement RBRACE

    LBRACE          shift and go to state 43

    block                          shift and go to state 42

state 37

    (10) formal_parameters -> formal_parameter COMMA . formal_parameters
    (10) formal_parameters -> . formal_parameter COMMA formal_parameters
    (11) formal_parameters -> . formal_parameter
    (12) formal_parameters -> . empty
    (13) formal_parameter -> . type_specification ID
    (14) formal_parameter -> . type_specification ID LBRACKET INT_CONST RBRACKET
    (15) formal_parameter -> . type_specification ID LBRACKET RBRACKET
    (65) empty -> .
    (16) type_specification -> . INT
    (17) type_specification -> . FLOAT
    (18) type_specification -> . CHAR
    (19) type_specification -> . BOOL
    (20) type_specification -> . GRAPH
    (21) type_specification -> . EDGE
    (22) type_specification -> . NODE
    (23) type_specification -> . VOID

    RPAREN          reduce using rule 65 (empty -> .)
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 8
    BOOL            shift and go to state 9
    GRAPH           shift and go to state 10
    EDGE            shift and go to state 11
    NODE            shift and go to state 12
    VOID            shift and go to state 13

    formal_parameter               shift and go to state 30
    formal_parameters              shift and go to state 44
    empty                          shift and go to state 31
    type_specification             shift and go to state 28

state 38

    (7) function_definition -> type_specification DFS LPAREN formal_parameters RPAREN . block
    (24) block -> . LBRACE compound_statement RBRACE

    LBRACE          shift and go to state 43

    block                          shift and go to state 45

state 39

    (8) function_definition -> type_specification BFS LPAREN formal_parameters RPAREN . block
    (24) block -> . LBRACE compound_statement RBRACE

    LBRACE          shift and go to state 43

    block                          shift and go to state 46

state 40

    (9) struct_definition -> STRUCT ID LBRACE type_specification RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 47


state 41

    (14) formal_parameter -> type_specification ID LBRACKET . INT_CONST RBRACKET
    (15) formal_parameter -> type_specification ID LBRACKET . RBRACKET

    INT_CONST       shift and go to state 48
    RBRACKET        shift and go to state 49


state 42

    (6) function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .

    INT             reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    FLOAT           reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    CHAR            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    BOOL            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    GRAPH           reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    EDGE            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    NODE            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    VOID            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    STRUCT          reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)
    $end            reduce using rule 6 (function_definition -> type_specification ID LPAREN formal_parameters RPAREN block .)


state 43
